<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:id="@+id/imgLogo"
        android:src="@drawable/app_logo"
        android:contentDescription="@string/app_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"/>


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:title="@string/app_name"
        app:titleTextColor="@android:color/white"
        app:subtitle="@string/login_page"
        app:subtitleTextColor="@android:color/white"
        app:titleCentered="true"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:autofillHints="android"
        android:hint="@string/username"
        android:inputType="textNoSuggestions" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btnRegister"
        android:text="@string/create_account"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

</LinearLayout>